<resources>
    <string name="app_name">Cuadramo</string>
    <string name="welcome">Welcome</string>
    <string name="sign_out">Sign out</string>
    <string name="have_to_sign_in_again">You will have to sign in back again</string>
    <string name="catalog">Catalog</string>
    <string name="editor">Editor</string>
    <string name="cash">Cash</string>
    <string name="tickets_left">Tickets left</string>
    <string name="tickets_total">Tickets total</string>
    <string name="food">Food</string>
    <string name="freebies">Freebies</string>
    <string name="delivery">Delivery</string>
    <string name="others">Others</string>
    <string name="cuadrar">Calculate</string>
    <string name="clear">Clear</string>
    <string name="fields_cleared">Fields cleared.</string>

    <!-- Button Sheet -->
    <string name="bottom_sheet_header">Details</string>
    <string name="bottom_sheet_date">Date:</string>
    <string name="bottom_sheet_cash">Cash:</string>
    <string name="bottom_sheet_documents">Documents:</string>
    <string name="bottom_sheet_expenses">Expenses:</string>
    <string name="bottom_sheet_result">Result:</string>
    <string name="save">Save</string>
    <string name="rate">Rate</string>
    <string name="delete">Delete</string>
    <string name="preview">Preview</string>
    <string name="revenue">Revenue</string>
    <string name="expenses">Expenses</string>
    <string name="tickets">Tickets</string>
    <string name="undo">Undo</string>
    <string name="sign_in_to_continue">Sign in to continue.</string>
    <string name="about">About</string>
    <string name="app">App</string>
    <string name="fork_on_github">Fork it on GitHub</string>
    <string name="made_by">Made by</string>
    <string name="cristal_diplan" translatable="false">Cristal Diplan</string>
    <string name="christian_v_squez" translatable="false">Christian Vásquez</string>
    <string name="not_recover">You will not be able to recover this cuadre.</string>
    <string name="edit">Edit</string>
    <string name="nothing_to_see_here">Nothing to see here</string>
    <string name="tap_the_plus_button_to_start">Tap on the + button to start</string>
    <string name="url_github">https://github.com/chrisvasqm/cuadramo</string>
    <string name="url_profile_chris">https://github.com/chrisvasqm</string>
    <string name="url_profile_carla">https://www.behance.net/hipandac</string>
</resources>
