<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="8dp"
    android:paddingBottom="8dp">

    <LinearLayout
        android:id="@+id/optionPreview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageView
            android:id="@+id/imagePreview"
            android:layout_width="24dp"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_receipt_dark_grey_24dp"
            android:contentDescription="@string/preview" />

        <TextView
            android:id="@+id/textPreview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:text="@string/preview" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/optionEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageView
            android:id="@+id/imageEdit"
            android:layout_width="24dp"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_baseline_edit_24"
            android:contentDescription="@string/preview" />

        <TextView
            android:id="@+id/textEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:text="@string/edit" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/optionDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageView
            android:id="@+id/imageDelete"
            android:layout_width="24dp"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_delete_dark_grey_24dp"
            android:contentDescription="@string/delete" />

        <TextView
            android:id="@+id/textDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:text="@string/delete" />

    </LinearLayout>


</LinearLayout>